--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-
+  background-color: bisque;
   border: 2px solid black;
 }
 .services-detail {
@@ -102,10 +102,22 @@
   height: 250px;
   border: 1px solid green;
   border-radius: 10px;
+  background-color: lightsteelblue;
 }
-
+#services div h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  margin: 6px 3px;
+}
+#services div p {
+  margin-top: 10px;
+  padding-top: 8px;
+}
 /*Contact*/
-#contact-bg {
-  background-color: lawngreen;
-  height: 580px;
+#contact {
+  width: 100%;
+  height: 150px;
+  background-color: rgba(248, 239, 113, 0.904);
+}
+#contact-div {
 }
