--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@
 #site-name {
   color: firebrick;
   margin: 12px 24px;
-  font-size: 25px;
+  font-size: 35px;
+  font-family: "Audiowide", cursive;
   text-decoration: underline;
 }
 
@@ -33,6 +34,7 @@
   padding: 12px;
   text-decoration: none;
 }
+
 /* HOME */
 
 #background-img {
@@ -118,6 +120,4 @@
   width: 100%;
   height: 150px;
   background-color: rgba(248, 239, 113, 0.904);
-}
-#contact-div {
 }
